Fix native emoji size, improve footer readability

--- a/www/style.css
+++ b/www/style.css
@@ -251,6 +251,7 @@ iframe{
             display: inline-block;
             margin-bottom: 20px;
             margin-right: 6px;
+            font-size: 26px;
         }
             .content_reactions .reaction:last-child{
                 margin-right: 0;
@@ -382,7 +383,8 @@ iframe{
 /**** Footer ****/
 footer{
     text-align: center;
-    padding-bottom: 30px;
+    background-color: rgba(11, 11, 11, .6);
+    padding: 20px 0 20px;
 }
     footer nav a{
         color: #fff;
@@ -392,6 +394,7 @@ footer{
     }
         footer nav a:after{
             content: " # ";
+            color: #ccc;
         }
             footer nav a:last-child:after{
                 content: "";
